fixed search on mobile version

--- a/main.css
+++ b/main.css
@@ -179,7 +179,8 @@ input:focus {
   color: #000000;
 }
 
-#search:focus-within {
+#search:focus-within,
+#searchMobile:focus-within {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -1163,6 +1164,34 @@ footer {
     color: #50c878;
   }
 
+  #searchMobile {
+    z-index: 3;
+    background-color: #edecec;
+    width: 90%;
+    height: 2rem;
+    position: fixed;
+    top: 4.75rem;
+    left: 5%;
+    padding: 0 0.5rem;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    box-sizing: border-box;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+  }
+
+  #searchMobile input {
+    width: calc(100% - 2.5rem);
+  }
+
+  #searchMobile button img {
+    width: 1rem;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+
   /*#endregion*/
 
   /*#region first page*/
@@ -1206,6 +1235,7 @@ footer {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     cursor: pointer;
+    margin-top: 2rem;
   }
 
   .swedishBreakfast {
